--- a/.github/workflows/powershell_lint.yml
+++ b/.github/workflows/powershell_lint.yml
@@ -32,5 +32,8 @@ jobs:
     - name: Run PSScriptAnalyzer
       run: |
         pwsh -Command "
+        if (-not (Get-Module -ListAvailable -Name PSScriptAnalyzer)) {
+          Install-Module -Name PSScriptAnalyzer -Force -Confirm:$false
+        }
         Get-ChildItem -Recurse *.ps1 | ForEach-Object { Invoke-ScriptAnalyzer -Path $_ }
         "
