--- a/.github/workflows/powershell_lint.yml
+++ b/.github/workflows/powershell_lint.yml
@@ -32,6 +32,10 @@ jobs:
         Install-Module -Name PSScriptAnalyzer -Force
         "
 
+    - name: Install ConvertTo-SARIF module
+      run: |
+        pwsh -Command "Install-Module -Name ConvertToSARIF -Force"
+
     - name: Run PSScriptAnalyzer
       run: |
         pwsh -Command "Invoke-ScriptAnalyzer -Path .\ -Recurse -ErrorVariable lintErrors | ConvertTo-SARIF -OutputPath results.sarif"
