--- a/.github/workflows/psscriptanalyzer.yml
+++ b/.github/workflows/psscriptanalyzer.yml
@@ -27,7 +27,6 @@ jobs:
         run: |
           Set-PSRepository -Name PSGallery -InstallationPolicy Trusted
           Install-Module -Name PSScriptAnalyzer -Force
-
       - name: Lint with PSScriptAnalyzer
         shell: pwsh
         run: |
@@ -42,16 +41,12 @@ jobs:
           if ($errorCount -gt 0) {
             Write-Error "There were $errorCount errors and $warningCount warnings total."
             Write-Output "Error Details:"
-            $errors | ForEach-Object {
-              Write-Output $_.ToString()
-            }
+            $errors | Format-List *
             exit 1
           } elseif ($warningCount -gt 0) {
             Write-Output "There were $errorCount errors and $warningCount warnings total."
             Write-Output "Warning Details:"
-            $warnings | ForEach-Object {
-              Write-Output $_.ToString()
-            }
+            $warnings | Format-List *
           } else {
             Write-Output "No linting errors or warnings found."
           }
